--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
             POSTGRES_DB: '${DB_DATABASE}'
         networks:
             - sail
+        volumes:
+            - 'sail-pgsql:/var/lib/postgresql/data'
     
     # mysql:
     #     image: 'mysql/mysql-server:8.0'
@@ -118,6 +120,8 @@ networks:
         driver: bridge
 volumes:
     sail-mysql:
+        driver: local
+    sail-pgsql:
         driver: local
     sail-redis:
         driver: local
